--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
-  <script type="module" src="../../@polymer/iron-component-page/iron-component-page.js"></script>
+  <script src="../webcomponentsjs/webcomponents-lite.js"></script>
+  <script type="module" src="../iron-component-page/iron-component-page.js"></script>
 
 </head>
 <body>
