--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-  <script src="../webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
   <script type="module" src="../iron-component-page/iron-component-page.js"></script>
 
 </head>
