--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>google-apis Demo</title>
-  <script src="../../../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
   <script type="module" src="../google-apis.js"></script>
 </head>
 <body>
